// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuestActions Should match snapshot with data 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: transparent;
  color: #DEFF4E;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c0:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c0:hover:enabled {
  border-color: #fff;
}

.c0:active:enabled {
  border: 1px solid #303338;
}

.c0:disabled {
  color: #fff;
}

.c1,
.c1 button {
  background-color: #2F3533;
  color: #fff;
}

.c2 {
  margin: 0;
  padding: 0.5rem 0.8rem;
  margin-left: 0;
  border-color: #737977;
}

<div>
   
  <button
    class="c0 c1 c2"
    data-testid="open-stake-tokens-modal-btn"
  >
    members.join
  </button>
   
</div>
`;

exports[`GuestActions Should match snapshot without data 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: transparent;
  color: #DEFF4E;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c0:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c0:hover:enabled {
  border-color: #fff;
}

.c0:active:enabled {
  border: 1px solid #303338;
}

.c0:disabled {
  color: #fff;
}

<div>
   
  <button
    class="c0"
    data-testid="guest-action-connect-wallet"
  >
    connections.connectWallet
  </button>
   
</div>
`;
